--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,6 @@ jobs:
       - name: 'Checkout code'
         uses: actions/checkout@v4
 
-      - name: 'Say hello'
-        run: echo "Hello, world! I am building the Spectra program."
+      - name: 'Build Docker image'
+        run: |
+          docker build -t spectra:latest .'
