--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,17 @@ jobs:
       - name: 'Checkout code'
         uses: actions/checkout@v4
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_SECRET }}
+
+
       - name: 'Build Docker image'
+        env:
+          DOCKER_REGISTRY: 'pangw1n/spectra'
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t spectra:latest .
+          docker build -t ${DOCKER_REGISTRY}:${IMAGE_TAG} .
+          docker push ${DOCKER_REGISTRY}:${IMAGE_TAG}
